src/main/default/objects/Case/fields/BillingNumber__c.field-meta.xml
<CustomField>
    <fullName>BillingNumber__c</fullName>
    <label>Billing Number</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>