src/main/default/objects/Case/fields/IsUrgent__c.field-meta.xml
<CustomField>
    <fullName>IsUrgent__c</fullName>
    <label>Is Urgent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Da</fullName>
            </value>
            <value>
                <fullName>Nu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>